# HomeworkM36

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: User.h  chatclient.cpp  chatclient.h  loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  sha256.cpp  sha256.h  startscreeen.cpp  startscreeen.h  startscreeen.ui  usernameregisted.cpp  usernameregisted.h
src/: ChatServer.cpp  ChatServer.h  QPlainTextBrowserLogger.h  baneduserform.cpp  baneduserform.h  baneduserform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mySQLTest.cpp  mySQLTest.h  userbandialog.cpp  userbandialog.h  userbandialog.ui
